--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
               <a class="nav-link" href="#projects" rel="nofollow">Projects</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="./img/resume.pdf" target="_blank" download>Resume</a>
+              <a class="nav-link" href="./img/Resume_ChiehYinWang.pdf" target="_blank" download>Resume</a>
             </li>
           </ul>
 
@@ -92,7 +92,7 @@
             <h5 class="mb-4">Full-Stack Web Developer</h5>
             <a class="btn btn-outline-light btn-lg m-2" href="#projects" role="button"
               rel="nofollow" >Projects</a>
-            <a class="btn btn-outline-light btn-lg m-2" href="./img/resume.pdf" target="_blank"
+            <a class="btn btn-outline-light btn-lg m-2" href="./img/Resume_ChiehYinWang.pdf" target="_blank"
               role="button">Resume</a>
           </div>
         </div>
