--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
       <div class="container-fluid">
         <!-- Navbar brand -->
         <a class="navbar-brand nav-link" target="_blank" href="https://github.com/SavaSava1209">
-          <strong>Portafolio</strong>
+          <strong>Portfolio</strong>
         </a>
         <button class="navbar-toggler" type="button" data-mdb-toggle="collapse" data-mdb-target="#navbarExample01"
           aria-controls="navbarExample01" aria-expanded="false" aria-label="Toggle navigation">
