--- a/index.html
+++ b/index.html
@@ -140,8 +140,8 @@
         <div class="row">
           <div class="col-lg-4 col-md-12 mb-4">
             <div class="card">
-              <div class="bg-image hover-overlay ripple" data-mdb-ripple-color="light">
-                <img src="./img/face_reg.png" class="img-fluid" />
+              <div class="bg-image hover-overlay ripple"  data-mdb-ripple-color="light">
+                <img src="./img/face_reg.png" width="400px" class="img-fluid" />
                 <a href="#!">
                   <div class="mask" style="background-color: rgba(251, 251, 251, 0.15);"></div>
                 </a>
@@ -162,8 +162,8 @@
 
           <div class="col-lg-4 col-md-6 mb-4">
             <div class="card">
-              <div class="bg-image hover-overlay ripple" data-mdb-ripple-color="light">
-                <img src="./img/recipes.png" class="img-fluid" />
+              <div class="bg-image hover-overlay ripple" width="400px" data-mdb-ripple-color="light">
+                <img src="./img/recipes.png"  class="img-fluid" />
                 <a href="#!">
                   <div class="mask" style="background-color: rgba(251, 251, 251, 0.15);"></div>
                 </a>
@@ -185,7 +185,7 @@
           <div class="col-lg-4 col-md-6 mb-4">
             <div class="card">
               <div class="bg-image hover-overlay ripple" data-mdb-ripple-color="light">
-                <img src="./img/ingredients.png" class="img-fluid" />
+                <img src="./img/ingredients.png" width="400px" class="img-fluid" />
                 <a href="#!">
                   <div class="mask" style="background-color: rgba(251, 251, 251, 0.15);"></div>
                 </a>
