change the web app link to heroku

--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
                 <p class="card-text">
                   #React.js #PostgreSQL #HTML #CSS #RestAPI #Express.js #Node.js #Redis
                 </p>
-                <a href="https://savasava1209.github.io/Foodies/" target="_blank" class="btn btn-primary">Demo</a>
+                <a href="https://foodies-v1.herokuapp.com/Foodies/" target="_blank" class="btn btn-primary">Demo</a>
                 <a href="https://github.com/SavaSava1209/Foodies" target="_blank" class="btn btn-primary">Repo</a>
               </div>
             </div>
@@ -198,7 +198,7 @@
                 <p class="card-text">
                    #React.js #PostgreSQL #HTML #CSS #RestAPI #Express.js #Node.js #Redis
                 </p>
-                <a href="https://savasava1209.github.io/Foodies/" target="_blank" class="btn btn-primary">Demo</a>
+                <a href="https://foodies-v1.herokuapp.com/Foodies/" target="_blank" class="btn btn-primary">Demo</a>
                 <a href="https://github.com/SavaSava1209/Foodies" target="_blank" class="btn btn-primary">Repo</a>
               </div>
             </div>
