--- a/index.html
+++ b/index.html
@@ -184,8 +184,8 @@
 
           <div class="col-lg-4 col-md-6 mb-4">
             <div class="card">
-              <div class="bg-image hover-overlay ripple" width="400px" data-mdb-ripple-color="light">
-                <img src="./img/usa_map.png"  height="1000px" class="img-fluid" />
+              <div class="bg-image hover-overlay ripple" data-mdb-ripple-color="light">
+                <img src="./img/usa_map.png" width="400px"class="img-fluid" />
                 <a href="#!">
                   <div class="mask" style="background-color: rgba(251, 251, 251, 0.15);"></div>
                 </a>
@@ -196,7 +196,7 @@
                   Enter the state you would like to find 
                 </p>
                 <p class="card-text">
-                   #Vue.js #PostgreSQL #HTML #CSS #RestAPI #Express.js #Node.js #Redis
+                   #Vue.js #PostgreSQL #HTML #CSS #RestAPI #Express.js #Node.js
                 </p>
                 <a href="https://savasava1209.github.io/usa_map/" target="_blank" class="btn btn-primary">Demo</a>
                 <a href="https://github.com/SavaSava1209/usa_map" target="_blank" class="btn btn-primary">Repo</a>
